<resources>
    <string name="app_name">Where</string>
    <string name="splashTitle">Copyright RML DEV 2019</string>
    <string name="logo" translatable="false">logo</string>
    <string name="user">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="login">Entrar</string>
    <string name="forget_pass">¿Has Olvidado tu contraseña?</string>
    <string name="add_user">Crear Usuario</string>
    <string name="name">Nombre:</string>
    <string name="surname">Apellido:</string>
    <string name="email">Email:</string>
    <string name="confirm_email">Confirma Email:</string>
    <string name="confirmPass">Consfirmar Contraseña:</string>
    <string name="create_user">Crear</string>
    <string name="insert_email">Insertar email:</string>
    <string name="send">Enviar</string>
    <string name="create_user_fail">Ha fallado la creación del usuario</string>
    <string name="get_location">Permiso para acceder a la ubicación</string>
    <string name="get_location_explanation">Necesitamos acceder a la ubicación del dispositivo para prestarte nuestros servicios</string>
    <string name="auth_fail">Usuario o contraseña incorrectos</string>
    <string name="missing_fields">Faltan campos por cumplimentar</string>
    <string name="ok">Aceptar</string>
    <string name="title_forgot_pass_dialog">Restabler contraseña</string>
    <string name="text_forgot_pass_dialog">Te hemos enviado un email para que puedas restablecer tu contraseña</string>
    <string name="fail_forgot_pass">Fallo al enviar el mensaje, inténtalo más tarde</string>
    <string name="toast_forgot_pass">Introduce un email</string>

    <string name="food_type">Tipo de comida:</string>
    <string name="price">Precio:</string>
    <string name="tittle_frament">Selecciona tus preferencias:</string>
    <string name="search">Buscar</string>
    <string name="title_activity_ubicacion_user" translatable="false">Map</string>
    <string name="distance">Distancia:</string>
    <string name="chinese_food">Comida china</string>
    <string name="italian_food">Comida italiana</string>
    <string name="spanish_food">Comida española</string>
    <string name="between_0_15">Entre 0€ y 15€</string>
    <string name="between_15_30">Entre 15€ y 30€</string>
    <string name="more_than_30">Más de 30€</string>
    <string name="less_50">Menos de 50 metros</string>
    <string name="between_50_100">Entre 50 metros y 100 metros</string>
    <string name="between_100_300">Entre 100 metros y 300 metros</string>
    <string name="loading">Acediendo</string>
    <string name="creating">Creando Usuario</string>
    <string name="sending_email">Emviando Email</string>
    <string name="view_on_map">Ver en maps</string>
</resources>
